--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+ <!-- package="com.bs.login" -->
     <application
         android:label="brownsofts"
         android:name="${applicationName}"
