--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_sign_in: ^6.2.1
+  http: ^1.2.2
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
