--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_sign_in: ^6.2.1
   http: ^1.2.2
   fluttertoast: ^8.2.8
+  shared_preferences: ^2.3.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
